--- a/style.css
+++ b/style.css
@@ -1,10 +1,45 @@
+* {
+    margin: 0;
+}
+
 nav {
     width: 100%;
-    height: 40px;
+    height: 70px;
     background-color: lightskyblue;
 }
 
 ul {
     list-style: none;
+    
 
+}
+
+.boxes {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 0 100px 0 100px;
+    height: auto;
+
+}
+
+.box {
+    border: 2px;
+    border-radius: 20px;
+    background-color: aqua;
+    padding: 20px;
+    margin: 20px;
+    text-align: center;
+}   
+
+.box img {
+    width: auto;
+    height: 200px;
+}
+
+.box h4 {
+    padding: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
 }
