--- a/style.css
+++ b/style.css
@@ -1,18 +1,22 @@
 * {
+    box-sizing: border-box;
     margin: 0;
 }
 
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    
+}
+
 nav {
+    position: sticky;
+    top: 0;
     width: 100%;
     height: 70px;
-    background-color: lightskyblue;
+    background-color: #1a4d2e;
 }
 
-ul {
-    list-style: none;
-    
 
-}
 
 .boxes {
     display: flex;
@@ -27,7 +31,7 @@ ul {
 .box {
     border: 2px;
     border-radius: 20px;
-    background-color: aqua;
+    background-color: #f4f4f9;
     padding: 20px;
     margin: 20px;
     text-align: center;
@@ -40,6 +44,12 @@ ul {
 
 .box h4 {
     padding: 20px;
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
+    color: #222;
+}
+
+footer {
+    width: 100%;
+    height: 70px;
+    background-color: #1a4d2e;
 }
