--- a/style.css
+++ b/style.css
@@ -5,30 +5,46 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
+    background: #f4f4f9;
+    color: #222;
     
 }
 
-nav {
+header {
+    background: #517d67;
+    color: white;
+    padding: 1rem 2rem;
     position: sticky;
     top: 0;
-    width: 100%;
-    height: 70px;
-    background-color: #517d67;
 }
 
-a {
-    color: #fff;
-    font-size: 20px;
-    margin: 17px;
+header .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header nav a {
+    color: white;
+    margin-left: 1rem;
     text-decoration: none;
-    display: inline-block;
+    font-weight: 500;
+}
+
+header nav a:hover {
+    color: #f9a826;
+}
+
+footer {
+    background: #1a4d2e;
+    color: white;
+    text-align: center;
+    padding: 1rem;
+    margin-top: 2rem;
 }
 
 
-footer a {
-    padding: 7px;
-}
-
+/* Team grid */
 .boxes {
     display: flex;
     justify-content: center;
