--- a/style.css
+++ b/style.css
@@ -1,27 +1,35 @@
 * {
-    box-sizing: border-box;
     margin: 0;
 }
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background: #f4f4f9;
+    background: #f8f9fb;
     color: #222;
     
 }
 
+
+/* header */
+
 header {
-    background: #517d67;
+    background: #0A2540;
     color: white;
     padding: 1rem 2rem;
     position: sticky;
     top: 0;
+    z-index: 10;
 }
 
 header .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+nav {
+    display: inline;
+    padding-right: 30px;
 }
 
 header nav a {
@@ -35,13 +43,59 @@ header nav a:hover {
     color: #f9a826;
 }
 
+
+/* slideshow */
+
+.slideshow-container {
+    display: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.slideshow-images {
+    height: auto;
+    width: 100%;
+    flex-grow: 1;
+}
+
+.slideshow-images img{
+    width: 100%;
+    max-height: 60vh;
+    min-width: 0;
+}
+
+.slideshow-text {
+   position: absolute;
+   justify-self: center;
+   padding: 60px 0 0 0;
+   
+}
+
+.slideshow-text h2 {
+    color: #f2f2f2;
+    font-size: 50px;
+    font-weight: 600;
+    padding: 10px 25px 10px 25px;
+    border-radius: 5px;
+    background-color: rgba(0, 87, 183, 0.7);
+}
+
+
+/* footer */
+
 footer {
-    background: #1a4d2e;
+    background: #0A2540;
     color: white;
     text-align: center;
     padding: 1rem;
     margin-top: 2rem;
 }
+
+footer p {
+    padding: 0.5rem;
+}
+
+
 
 
 /* Team grid */
@@ -57,7 +111,7 @@ footer {
 
 .box {
     border-radius: 20px;
-    background-color: #f4f4f9;
+    background-color:  #0057B7;
     padding: 20px;
     margin: 20px;
     text-align: center;
@@ -66,8 +120,8 @@ footer {
 
 .box:hover {
     cursor: pointer;
-    background-color: #d3d3da;
-    box-shadow: 5px 5px 10px #939393;
+    background-color: #0A2540;
+    box-shadow: 5px 5px 10px  #ababab;
 }
 
 .box img {
@@ -82,11 +136,10 @@ footer {
 .box h4, h3 {
     padding: 20px;
     font-size: 20px;
-    color: #222;
+    color: #f8f9fb;
+    
 }
 
-footer {
-    width: 100%;
-    height: 70px;
-    background-color: #517d67;
+.box-link {
+    text-decoration: none;
 }
